# MIG-sample

./: .env_sample  .gitignore  LICENSE  README.md
simple-python-app/: .env.docker.sample  Dockerfile  README.md  pyproject.toml  requirements.txt
simple-python-app/src/simple_python_app/: app.py
simple-python-app/terraform/: main.tf  variables.tf  versions.tf
terraform-configs/MIG/: VPC.tf  backend.tf  cloudsql.tf  loadbalancer.tf  main.tf  secrets.tf  service_account.tf  variables.tf  versions.tf
terraform-configs/artifact-registry/: backend.tf  main.tf  variables.tf
terraform-configs/backend-bucket/: main.tf  variables.tf  versions.tf
terraform-configs/gcp-project/: main.tf  variables.tf
